--- a/code/src/Components/HappyForm.css
+++ b/code/src/Components/HappyForm.css
@@ -31,6 +31,7 @@ h1{
 }
 
 .submit-button{
+  font-family: 'Inconsolata', monospace;
   font-size: 1em;
   background-color: rgb(250, 168, 168);
   border-radius: 25px;
