--- a/code/src/index.css
+++ b/code/src/index.css
@@ -75,12 +75,15 @@ form {
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 
 .grey-style {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
   color: grey;
+}
+.red-style {
+  color: red;
 }
 
 .likes-button {
