--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -33,6 +33,10 @@
     resize: none;
   }
 
+  textarea:focus {
+    outline: #FFADAD solid 2px;
+  }
+
   .form-footer {
     width: 100%;
     display: flex;
@@ -53,5 +57,11 @@
     font-weight: 500;
     color: #000000;
     padding: 10px;
+    margin: 0;
+    cursor: pointer;
+  }
+
+  .text-length {
+    font-size: 11px;
     margin: 0;
   }
