--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -63,4 +63,9 @@
     height: 35px;
     border: none;
     border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .heart-button:focus {
+    outline: #FFADAD solid 1px;
   }
