--- a/code/src/PostThoughts.css
+++ b/code/src/PostThoughts.css
@@ -1,10 +1,11 @@
   .post-contents {
+    width: 300px;
     height: 120px;
     display: flex;
     flex-direction: column;
     margin: 20px;
     padding: 20px;
-    background: lightgrey;
+    background: rgb(245, 241, 241);
     border: 1px solid black;
     border-radius: 2px;
     box-shadow: 2px 2px 0px 0px black;
@@ -28,6 +29,7 @@
     font-size: 10px;
     border: 1px solid grey;
     padding: 5px;
+    max-width: 300px;
   }
   
   .name-input {
@@ -52,7 +54,7 @@
   }
   
   @media (min-width: 669px) {
-    .post-content {
+    .post-contents {
       width: 510px;
     }
     .form-input {
