--- a/code/src/Components/Style.css
+++ b/code/src/Components/Style.css
@@ -41,6 +41,7 @@ label {
 
 textarea {
 	width: 100%;
+	font-size: 16px;
 }
 
 .button-send-post {
@@ -78,6 +79,7 @@ textarea {
 	grid-template-columns: min-content;
 	grid-column-gap: 10px;
 	align-items: center;
+	word-break: break-word;
 	padding: 20px;
 }
 
@@ -107,7 +109,7 @@ textarea {
 }
 
 .heart-like {
-	margin-left: 3px;
+	margin-left: 4px;
 }
 
 .notLiked,
@@ -126,27 +128,29 @@ textarea {
 }
 
 .liked {
-	background: #ffadad;
+	background: #ffd5cd;
 }
 
 .superLiked {
-	background: #ffadad;
+	background: #f99292;
 	animation: stretch 4s ease-in-out infinite;
 }
 
 /*LOADING SPINNER*/
 .loader {
-	border: 16px solid #f3f3f3;
+	border: 5px solid #f2f0f0;
 	border-radius: 50%;
-	border-top: 16px solid #3498db;
-	width: 70px;
-	height: 70px;
-	animation: spin 8s linear infinite;
-	display: flex;
-	justify-content: center;
+	border-top: 6px solid #ffadad;
+	width: 120px;
+	height: 120px;
+	position: relative;
+	left: calc(50% - 60px);
+	top: 30px;
+	animation: spin 2s linear infinite;
 }
 
-@keyframes loader {
+/*Animation for loader when waiting for the fetch*/
+@keyframes spin {
 	0% {
 		transform: rotate(0deg);
 	}
@@ -155,6 +159,7 @@ textarea {
 	}
 }
 
+/*Animation for superliked posts*/
 @keyframes stretch {
 	0% {
 		transform: scale(1);
@@ -169,6 +174,21 @@ textarea {
 
 /*Media querys*/
 @media (min-width: 768px) {
+	h1 {
+		font-size: 22px;
+	}
+
+	p {
+		font-size: 18px;
+	}
+
+	.post-message-length {
+		font-size: 16px;
+	}
+
+	.button-send-post {
+		width: 300px;
+	}
 }
 
 @media (min-width: 1024px) {
