--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -55,10 +55,18 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
     font-size: 11px;
     font-weight: 500;
-    color: #000000;
     padding: 10px;
     margin: 0;
     cursor: pointer;
+    transition: 0.5s ease;
+  }
+
+  .thought-button span {
+    margin: 0 5px;
+  }
+
+  .thought-button:disabled, .thought-button[disabled] {
+    opacity: 0.6;
   }
 
   .text-length {
