--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,16 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@500;600&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Inconsolata", -apple-system, monospace, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-background-color: pink;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background-color: #f4abc4;
 }
 
 main {
@@ -26,6 +21,7 @@ h2 {
 h3 {
   font-weight: 700;
   font-size: 18px;
+  word-wrap: break-word;
 }
 
 p {
@@ -45,9 +41,10 @@ p {
   box-shadow: 10px 8px 0 -2px black; 
 }
 
-.form-text {
+input.form-text {
   width: 380px;
-  height: 80px;
+  height: 60px;
+  outline-color: pink;
 }
 
 .form-button {
@@ -56,9 +53,11 @@ p {
   border-radius: 30px;
   padding: 10px;
   border: 1px solid #999;
-  background-color: #ccc;
-  color: #666;
+  background-color: #f4abc4;
+  color: #060930;
   cursor: pointer;
+  font-family: "Inconsolata", -apple-system, monospace, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-weight: 800; 
 }
 
 /* MESSAGE CARD */
@@ -73,14 +72,38 @@ p {
   box-shadow: 10px 8px 0 -2px black;
 }
 
-/*.message {
-  
-}*/
-
 .message-bottom {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; 
 }
+
+.like-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.heart-button {
+  width: 40px;
+  height: 40px; 
+  border-radius: 50%;
+  background-color: #cac2c2;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+}
+
+.heart {
+  text-align: center;
+  font-size: 16px;
+}
+
+.likes {
+  display: flex;
+  color: #d6d0d0;
+}
+
 .messageTime {
   justify-self: right;
   align-items: center;
@@ -90,12 +113,7 @@ p {
   font-weight: lighter;
 }
 
-.heart-button {
-  width: 40px;
-  height: 40px; 
-  border-radius: 50%;
-  background-color: #cccccc85;
-  margin-top: 10px;
-  border: none;
-  cursor: pointer;
-} 
+
+
+
+
