--- a/code/src/index.css
+++ b/code/src/index.css
@@ -104,6 +104,21 @@ textarea {
 	animation: fadeIn 2s;
 }
 
+.thought-card {
+	animation: grow 1s;
+}
+
+@keyframes grow {
+	from {
+		/* opacity: 0; */
+		transform: scale(0.8);
+	}
+	to {
+		/* opacity: 1; */
+		transform: scale(1);
+	}
+}
+
 .bottom-container {
 	display: flex;
 	flex-direction: row;
@@ -113,6 +128,7 @@ textarea {
 .message {
 	font-weight: bold;
 	font-size: 14px;
+	word-break: break-word;
 }
 
 .date,
@@ -139,6 +155,15 @@ textarea {
 	width: 40px;
 	border: none;
 	background-color: lightgray;
+}
+
+.mega-like-button {
+	margin-right: 10px;
+	border-radius: 50%;
+	height: 40px;
+	width: 40px;
+	border: none;
+	background-color: #fa7fa7;
 }
 .like-button,
 .submit-button,
