--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,9 +2,17 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: monospace, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
 .thoughts-container {
   display: flex;
   flex-direction: column;
@@ -13,7 +21,7 @@ body {
   align-items: center;
 }
 
-.thoughts-card {
+.message {
   width: 450;
   height: 250px;
   height: min-content;
@@ -31,13 +39,32 @@ body {
 
 .new-thought {
   color: black;
-  width: 450;
+  width: 300;
   height: 250px;
   color: rgb(242, 240, 240);
   box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 1);
   border: 1px solid black;
   background-color: whitesmoke;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.new-thought h3 {
+  color: black;
+}
+
+.form-button {
+  background-color: lightcoral;
+  width: 200px;
+  height: 35px;
+  border-radius: 30px;
+  color: black;
+}
+
+.form-text {
+  width: 200px;
+  height: 70px;
 }
 
 .thought {
@@ -50,7 +77,6 @@ body {
 
 .time-stamp {
   font-size: 16px;
-  border: 2px solid black;
   color: #bebebe;
   font-weight: 900;
   margin: 5px 5px 5px 30px;
@@ -60,4 +86,14 @@ body {
   /* margin-top: 40px;
   margin-left: 80px;
   display: inline-block; */
+}
+
+.heart-button {
+  font-size: 30px;
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  background-color: coral;
+  display: flex;
+  justify-content: center;
 }
