--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,5 @@
 body {
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,4 +11,83 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.header {
+  font-size: 80px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 100px;
+  
+}
+
+.header p {
+  font-size: 40px;
+  color:#FFADAD;
+}
+
+.form-container {
+  background-color: #f3f1f1;
+  border: 2px solid #000;
+  box-shadow: 6px 6px #000;
+  width: 450px;
+  margin: 40px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.thought-list {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  text-align: left;
+}
+
+.thought-container {
+  background-color: #fff;
+  border: 2px solid #000;
+  box-shadow: 6px 6px #000;
+  width: 450px;
+  margin: auto;
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.like-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+}
+.like-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.submit-button {
+  padding: 15px 25px;
+  margin: 15px 0;
+  border-radius: 30px;
+  border: none;
+  background-color: #FFADAD;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 16px;
+}
+
+.thought {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 18px;
+  padding: 20px 10px;
+}
+
+.created {
+  font-size: 16px;
+  color: #6d6c6c;
 }
