--- a/code/src/index.css
+++ b/code/src/index.css
@@ -9,6 +9,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: left;
+  word-wrap: break-word;
   width: 500px;
   margin:auto;
   padding: 20px 0px 20px 40px;
@@ -21,8 +22,9 @@ body {
 .text-area {
   display: flex;
   width: 450px;
+  resize: none;
+  /* min-height: 100px; */
   margin: 0;
-  min-height: 50px;
   border: solid 1px #d1d1d1;
 }
 
