--- a/code/src/Messagelist.css
+++ b/code/src/Messagelist.css
@@ -1,9 +1,38 @@
 .message {
     display: flex;
     flex-direction: column;
-    font-size: 15;
+    font-size: 14;
+    font-weight: bold;
+    margin-top: 0;
 }
 .message-time {
-    color: red;
-    font-size: 10px;
+    font-size: 11px;
+    padding: 0;
+    margin: 0 0 7px 0;
+    color: gray;
+    align-self: flex-end;
+}
+
+.message-box {
+    background-color: #f3f1f1;
+    border: 2px solid black;
+    box-shadow: 4px 4px black;
+    width: 300px;
+    margin: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+@media (min-width: 668px) {
+    .message-box {
+        width: 370px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .message-box {
+        width: 400px;
+    }
 }
