--- a/code/src/messageForm.css
+++ b/code/src/messageForm.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   padding: 20px;
   word-wrap: break-word;
-  margin: 30px;
+  margin: 20px;
 }
 
 .happy-form textarea {
@@ -25,8 +25,11 @@
 }
 
 .happy-form button {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   height: 50px;
-  width: 60%;
+  width: 70%;
   background-color: #ffadad;
   border: none;
   font-size: 14px;
@@ -41,8 +44,9 @@
 
 .form-footer {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
   width: 100%;
 }
 
@@ -51,12 +55,16 @@
   flex-direction: column;
 }
 
+.message {
+  background-color: white;
+}
+
 .happy-message button{
   width: 40px;
   height: 40px;
   border-radius: 50%;
   border: none;
-  background-color: white;
+  background-color:#f3f1f1;
 }
 
 .happy-message button:hover {
@@ -65,8 +73,18 @@
 
 .message-time {
   font-size: 12px;
-  opacity: .7;
-  border: 2px solid black;
+  opacity: .5;
+}
+
+.heart-likes {
+  font-size: 12px;
+  opacity: .5;
+  margin-left: 5px;
+}
+
+.heart {
+  position: absolute;
+  transform: translate(-9px, -11px);
 }
 
 .liked {
