--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -1,3 +1,11 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+  }
+
 .happy-form {
     background-color: #f3f1f1;
     border: 2px solid black;
@@ -43,4 +51,16 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+}
+
+@media (min-width: 668px) {
+    .message-box {
+        width: 370px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .message-box {
+        width: 400px;
+    }
 }
