--- a/code/src/index.css
+++ b/code/src/index.css
@@ -25,9 +25,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin:20px;
-
-
+  width: 80%;
 }
 
 
@@ -36,7 +34,7 @@ form {
   flex-direction: column;
   font-family: 'Roboto Mono', monospace;
   background-color: #e8e9eb;
-  width: 60%;
+  width: 50%;
   padding: 30px; 
   border: 1px solid black;
   box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
@@ -49,61 +47,46 @@ form {
   flex-direction: column;
 }
 
-
 .form-conatiner label{
   display: flex;
   flex-direction: column;
 }
 
-
-/*
-input[type=textarea], select {
-  width: 95%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  border: 1px solid #ccc;
-  font-size: 18px; 
-  padding-inline-start: 5px;
-}
-*/
-
-button {
+.form-button {
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 90%;
   margin-top: 50px;
   border: none;
   border-radius: 25px;
   color: #000;
   background-color: #d9fcc2;
-  padding: 8px 10px;
+  padding: 10px 15px;
   text-align: center;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 16px;
   cursor: pointer; 
 }
 
-
-button p {
-  padding: 10px;
-}
 
 .heart-button {
-  display: flex;
-  justify-content: center;
-  width: 8%;
-  margin-top: 10px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-right: 5px;
   border: none;
-  border-radius: 100%;
-  color: #000;
-  background-color: #d9fcc2;
-  padding: 8px 10px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 12px;
   cursor: pointer; 
 }
 
+.heart-button-icon {
+  font-size: 18px;
+}
+
+.heart-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
 
 .thoughts-length-left {
@@ -128,7 +111,7 @@ button p {
   background-color: #fff;
   width: 50%;
   min-height: 80px;
-  margin-top: 30px;
+  margin-top: 50px;
   padding: 40px; 
   border: 1px solid black;
   box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
@@ -149,16 +132,14 @@ button p {
 
 @media screen and (min-width: 667px) and (max-width:1024px) { 
 
-  .form {
-    width: 55%;
+  form {
+    width: 65%;
   }
   .previous-messages {
-    width: 45%;
+    width: 65%;
   }
 
-
-
-  button {
+  .form-button {
     width: 80%;
     font-size: 14px;
     padding: 10px 18px;
@@ -172,21 +153,21 @@ button p {
 
 @media screen and (min-width: 1024px) {
 
-  .form {
+  main {
+    width: 80%;
+  }
+  form {
     width: 60%;
   }
 
   .previous-messages {
-    width: 55%;
+    width: 60%;
   }
 
-
-
-
-  button {
-  width: 60%;
+  .form-button {
+  width: 40%;
   font-size: 16px;
   padding: 15px 32px;
-   
   }
+  
  }
