--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -1,21 +1,13 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-  }
-
 .happy-form {
-    background-color: #f3f1f1;
-    border: 2px solid black;
-    box-shadow: 4px 4px black;
     width: 300px;
     margin: 16px;
+    padding: 20px;
+    background-color: #f5f5f1;
+    border: 1px solid black;
+    box-shadow: 4px 10px black;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 20px;
 }
 
 .happy-form textarea {
@@ -23,7 +15,6 @@
     resize: none; 
     padding: 10px;
     font-size: 16px;
-    box-sizing: border-box;
     margin: 10px 0;
 }
 
@@ -36,14 +27,18 @@
     width: 60%;
     background-color: #ffadad;
     border: none;
-    font-size: 14px;
-    border-radius: 25px;
-    padding: 10px;
+    font-family: 'Inconsolata', monospace;
+    font-size: 16px;
+    border-radius: 20px;
+    padding: 10px 20px;
     font-weight: 500;
+    border: 1px solid #f5f5f1;
 }
 
 .happy-form button:hover {
     cursor: pointer;
+    background: white;
+    border: 1px solid #ffadad;
 }
 
 .form-footer {
@@ -54,13 +49,8 @@
 }
 
 @media (min-width: 668px) {
-    .message-box {
-        width: 370px;
+    .happy-form {
+        width: 500px;
     }
 }
 
-@media (min-width: 1024px) {
-    .message-box {
-        width: 400px;
-    }
-}
