--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,18 +6,14 @@
   text-rendering: optimizeLegibility;
 }
 
-html {
-  margin: 0;
-}
-
 body {
   margin: 0;
   font-family: 'Inconsolata', monospace;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Inconsolata", "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 code {
