--- a/code/src/components/ThoughtInput.css
+++ b/code/src/components/ThoughtInput.css
@@ -2,15 +2,30 @@ form {
   display: flex;
   flex-direction: column;
   background: whitesmoke;
-  width: 90%;
-  margin: 10px;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
   padding: 15px;
+  border: darkgray 2px solid;
+  border-radius: 2px;
+  box-shadow: black 8px 8px;
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
 }
 
 textarea {
-  width: 100%;
+  width: 98%;
   border: 2px solid lightgray;
   border-radius: 2px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
+  outline: none;
+  resize: none;
+  overflow: auto;
+  margin-bottom: 10px;
 }
 
 .submit-button-container {
@@ -24,21 +39,33 @@ textarea {
   border:none;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 50%;
   height: 40px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
 }
 
-
-
-@media (min-width: 1024px) {
+@media (min-width: 667px) and (max-width: 1024px) {
   article {
-    width: 30%;
+    width: 50%;
+  }
+  form {
+    width: 50%;
   }
 }
 
-@media (min-width: 1024px) {
+
+@media (min-width: 1025px) {
+  article {
+    width: 30%;
+  }
+
   form {
     width: 30%;
+  }
+
+  .submit-button {
+    width: 40%;
   }
 }
