--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,7 +22,8 @@ code {
 .form-container {
   height: 200px;
   background: #f2f0f0;
-  border: 2px solid;
+  border: 1px solid;
+  box-shadow: 7px 7px black;
 }
 
 .input-form {
@@ -44,8 +45,9 @@ code {
 
 .message-container {
   height: 150px;
-  border: 2px solid;
+  border: 1px solid;
   margin-top: 30px;
+  box-shadow: 7px 7px black;
 }
 
 .message-content {
