--- a/code/src/index.css
+++ b/code/src/index.css
@@ -9,6 +9,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: 1px solid green;
 }
