Updated the ThoughtsMessage.css: 1. Added the updated class name for the message and form footer. 2. Added the super-liked class styling.

--- a/code/src/Components/ThoughtsMessage.css
+++ b/code/src/Components/ThoughtsMessage.css
@@ -16,7 +16,7 @@
     font-family: 'Inconsolata', monospace;
 }
 
-.message-wrapper {
+.form-message-footer {
     display: flex;
     justify-content: space-between;
     align-items:center ;
@@ -54,4 +54,8 @@ p {
 
 .liked {
     background-color: #ffadad;
+}
+
+.super-liked {
+    background-color: #ff6868;
 }
