Updated ThoughtsForm.js & css: 1. Added some notes for my own reference. 2. Wrapped the button and p tag in a span so I can impliment the display flex and have them side by side. 3. Added the comparison for the button. So it'll be disabled if the user writes 6 or less or 140 04 more letters in the textarea. Otherwise the button will be un-disabled allowing them to submit the message. 4. Replaced the 5 with the newMessage.length, so when the user starts to write in the textarea the number will reflect how many letters htey've submitted.

--- a/code/src/Components/ThoughtsForm.css
+++ b/code/src/Components/ThoughtsForm.css
@@ -25,6 +25,22 @@
     font-size: 13px;
 }
 
+.form-message-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items:center ;
+}
+
+p {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.letter-counter {
+    color: #8d8c8c;
+    font-weight: 600;
+    font-size: 16px; 
+}
+
 .form-button {
     background: #ffadad;
     padding: 12px 17px;
