--- a/code/src/components/css/thoughtsInput.css
+++ b/code/src/components/css/thoughtsInput.css
@@ -4,7 +4,8 @@
   align-items: left;
   background: #f2f0f0;
   border: 1px solid black;
-  width: 50%;
+  width: 80%;
+  box-shadow: 10px 10px 1px 1px black;
 }
 
 label {
@@ -14,7 +15,7 @@ label {
 
 textarea {
   margin-bottom: 20px;
-  width: 450px;
+  width: 90%;
 }
 
 .send-button {
