--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,6 +12,8 @@ code {
     monospace;
 }
 .form-text {
+  width: 100%;
+  height: auto;
   margin: 8px;
   font-size: 26px;
 }
@@ -30,4 +32,9 @@ code {
   margin: 8px;
   font-size: 18px;
   color: #6e6e6e;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
