--- a/code/src/index.css
+++ b/code/src/index.css
@@ -21,3 +21,10 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.main-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
