--- a/code/src/Style/Header.css
+++ b/code/src/Style/Header.css
@@ -29,15 +29,15 @@
     transform: scale(1.3);
   }
 
-  28% {
+  20% {
     transform: scale(1);
   }
 
-  42% {
-    transform: scale(1.3);
+  70% {
+    transform: scale(1);
   }
 
-  70% {
+  100% {
     transform: scale(1);
   }
 }
@@ -45,7 +45,8 @@
 .header-title-2 {
   animation-name: pulse;
   animation-timing-function: ease;
-  animation-duration: 2s;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
   animation-delay: 1s;
   animation-fill-mode: both;
   color: #f72585;
