--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.7)
+    ),
+    url("./background-image.jpg");
+  /*background: url("./background-image.jpg");*/
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 code {
@@ -16,15 +25,20 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 390px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .send-thought {
   border: 1px solid black;
   width: 350px;
-  height: 150px;
+  height: 135px;
   margin: 30px 0;
   padding: 10px;
   box-shadow: 5px 5px 1px black;
+  background-color: rgb(240, 236, 236);
+  position: relative;
 }
 
 .send-thought form {
@@ -34,6 +48,43 @@ code {
 
 .send-thought textarea {
   resize: none;
+  margin: 10px 0;
+}
+
+.send-thought-btn {
+  width: 50%;
+  height: 36px;
+  border-radius: 20px;
+  border: none;
+  background-color: #ffadad;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.send-thought-btn:hover {
+  background-color: rgb(250, 123, 123);
+  cursor: pointer;
+}
+
+.send-heartemoji {
+  font-size: 10px;
+  margin: 0 3px;
+}
+
+.character-count {
+  position: absolute;
+  right: 10px;
+  bottom: 0px;
+  font-size: 12px;
+  font-weight: 650;
+}
+
+.red-length {
+  color: red;
+}
+
+.green-length {
+  color: black;
 }
 
 .thought-card {
@@ -41,44 +92,40 @@ code {
   flex-direction: column;
   border: 1px solid black;
   width: 350px;
-  height: 120px;
+  height: 135px;
   margin-bottom: 30px;
   padding: 10px;
   box-shadow: 5px 5px 1px black;
   word-break: break-word;
+  background-color: #ffffff;
 }
 
 .thought-text {
   font-family: Courier New, monospace;
 }
 
-.time-text {
+.time-text,
+.like-text {
   font-size: 12px;
   color: rgb(187, 186, 186);
-}
-
-.like-text {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: rgb(187, 186, 186);
-  text-align: right;
 }
 
 .liked-heartemoji {
   padding: 6px;
   border-radius: 50%;
-  background-color: rgb(221, 218, 218);
+  background-color: rgb(240, 236, 236);
   margin-right: 5px;
 }
 
 .top-of-card {
-  height: 50%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
 .bottom-of-card {
-  height: 50%;
+  height: 30%;
   display: flex;
   align-items: center;
   justify-content: space-between;
