--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,6 +16,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
 
 button {
