--- a/code/src/Style/ThoughtSubmitForm.css
+++ b/code/src/Style/ThoughtSubmitForm.css
@@ -3,10 +3,10 @@
 }
 
 .button-submit-thought {
-  background-color: #9a8c98;
+  background-color: #8a5a44;
   border-radius: 20px;
   border: none;
-  color: rgb(2 ,2 ,2);
+  color: #ffffff;
   font-family:  'Capriola', sans-serif;
   margin-top: 10px;
   padding: 5px 15px;
@@ -14,10 +14,15 @@
 
 .thought-box {
   height: 45px;
+  margin-top: 20px;
+}
+.thought-form-label {
+  color: rgb(2, 2, 2);
+  font-family: 'Capriola', sans-serif;
 }
 
 .word-count {
   font-family: 'Raleway', sans-serif;
-  font-size: 14px;
   font-weight: 500;
+  font-size: 14px;
 }
