--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,8 @@
 body {
-  margin: 0;
-  font-family: 'Capriola', sans-serif;
   background-image: url("./assets/bfImage.jpg");
   background-position: 74% 41%;
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
 
   
 }
