I think that i am going to leave the ambition to reach the black level for a bit later. lol

--- a/code/src/components/happyThoughts.css
+++ b/code/src/components/happyThoughts.css
@@ -53,6 +53,7 @@
   background-color: rgba(211, 211, 211, 0.415);
 }
 p {
+  margin-top: 20px;
   padding-left: 10px;
   font-family: "Turret Road", cursive;
 }
