--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,6 +10,7 @@ body {
   background-image: url('./Components/assests/freestocks-Y9mWkERHYCU-unsplash.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
+  
 }
 
 code {
@@ -54,6 +55,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 /************** MESSAGES *****************/
 
@@ -62,7 +64,7 @@ form {
 }
 
 .message {
-  width: 400px;
+  width: 380px;
   border: 1px solid #8e8d8d;
   box-shadow: 5px 5px;
   margin: 20px;
@@ -135,12 +137,14 @@ form {
 
 .counter {
   width: 400px;
-  border: 1px solid #8e8d8d;
+  border: 15px solid #ec4b4b;
   box-shadow: 5px 5px;
   margin: 20px;
   font-family: 'Inconsolata', monospace;
-  padding: 20px;
+  padding: 0 20px;
   background: white;
+  text-align: center;
+  font-weight: bold;
 }
 
 /************* FOOTER **************/
