Applied the structure on the API, fetching and posting works

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.form-button {
+  width: 100px;
+  height: 25px;
+}
