--- a/code/src/app.css
+++ b/code/src/app.css
@@ -1,8 +1,6 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  width: 500px;
-  border: 2px solid black;
+  padding-top: 50px;
 }
