--- a/code/src/components/messageInput.css
+++ b/code/src/components/messageInput.css
@@ -1,31 +1,46 @@
 .message-input-container {
   display: flex;
   flex-direction: column;
-  height: 200px;
-  width: 380px;
+  height: 220px;
+  width: 400px;
   border: 2px solid black;
-}
-
-.btn-thought {
-  width: 50%;
-  margin: 10px 20px;
-  padding: 0;
-}
-
-.form-text {
-  margin: auto;
-  width: 340px;
-  height: 50px;
+  box-shadow: 7px 7px;
 }
 
 .input-heading {
-  margin: 10px 20px;
+  margin: 14px 18px 10px;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.btn-thought {
+  width: 180px;
+  height: 32px;
+  margin: 4px 20px;
+  padding: 0;
+  font-weight: 700;
+  background: none;
+  border: 2px solid #000;
+  /* border-radius: 6px; */
+}
+
+.form-text {
+  margin: 5px auto;
+  width: 354px;
+  height: 50px;
 }
 
 .characters-left {
-  margin: 0 20px;
+  margin: 26px 20px 10px 20px;
+  font-size: 14px;
 }
 
 textarea {
   resize: none;
+  outline: none;
+  /* border-radius: 6px; */
+}
+
+textarea[type="text"] {
+  font-family: "Roboto Mono", monospace;
 }
