--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+p {
+  margin: 0;
+}
+
 .container {
   position: relative;
   min-height: 100vh;
@@ -54,7 +58,14 @@ section {
   margin: 0 10px;
   width: 90%;
   border: 1px solid #d0cfcf;
-  height: 32px;
+}
+
+.input-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+  font-size: 12px;
 }
 
 .send-button {
@@ -63,7 +74,6 @@ section {
   border: none;
   border-radius: 15px;
   padding: 0 5px;
-  margin: 10px;
   background: #ffadad;
   font-size: 12px;
   display: flex;
@@ -77,11 +87,13 @@ section {
 
 .message {
   margin: 10px;
+  word-wrap: break-word;
 }
 
 .info {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 10px;
   padding: 10px;
 }
